--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,67 @@
 /* blackboard background image */
 
 body {
-    background-image: url("./assets/UniformBadDingo-size_restricted.gif");
+    display: flex;
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    /* background-image: url("./assets/UniformBadDingo-size_restricted.gif");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
+
+.container2 {
+    width: 1200px;
+    max-width: 1000%;
+    max-height: 1000%;
+    background-color: rgb(125, 194, 194);
+    box-shadow: 20px 20px 10px;
+    margin: 20px 0;
+}
+
+#btn-grid {
+    display: grid;
+    gap: 10px;
+}
+
 /* decorate and align start button */
 .btn {
-    position: fixed;
+    /* position: relative; */
     left: 50%;
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
     background-color: black;
     color: white;
     text-decoration: none;
     margin-bottom: 1rem;
     border-radius: 6px;
+    border: 2px solid white;
     padding: 1rem;
     margin: auto;
+    justify-content: center;
 }
+
+.btn:hover {
+    border-color: rgba(38, 255, 0, 0.405);
+    
+}
+
+#previous-btn, #next-btn {
+    padding: .5rem;
+    margin: auto;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 2em;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 2px solid black;
+    background-color: rgb(102, 255, 102);
+    align-items: center;
+}
+
 
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -29,7 +72,6 @@ h1 {
 
 img {
    width: 800px;
-   
-    
+
 }
 
