--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,63 @@
-/* blackboard background image */
 
 body {
     display: flex;
-    padding: 0;
-    margin: 0;
-    width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
-    /* background-image: url("./assets/UniformBadDingo-size_restricted.gif");
+    background-image: url('https://t3.ftcdn.net/jpg/03/23/12/42/360_F_323124237_SfGqpttZqU2mrMm61VPSWA2tKvc95l9O.jpg');
     background-repeat: no-repeat;
-    background-size: cover; */
-}
+    background-size: cover;
 
-.container2 {
-    width: 1200px;
-    max-width: 1000%;
-    max-height: 1000%;
-    background-color: rgb(125, 194, 194);
-    box-shadow: 20px 20px 10px;
-    margin: 20px 0;
 }
-
-#btn-grid {
-    display: grid;
-    gap: 10px;
-}
-
-/* decorate and align start button */
-.btn {
-    /* position: relative; */
-    left: 50%;
-    font-size: 1.5em;
-    text-align: center;
-    background-color: black;
+/* Start button styling */
+.start-btn{
+    position: absolute;
     color: white;
+    font-size: 2.5em;
+    font-weight: 400;
+    top: 75%;
+    background-color: green;
     text-decoration: none;
-    margin-bottom: 1rem;
     border-radius: 6px;
-    border: 2px solid white;
-    padding: 1rem;
+    border: 3px solid black;
+    padding: 15px 30px;
     margin: auto;
-    justify-content: center;
+    margin-bottom: 1rem;
+    /* justify-content: center; */
 }
 
-.btn:hover {
-    border-color: rgba(38, 255, 0, 0.405);
-    
+.container {
+    height: 900px;
 }
-
-#previous-btn, #next-btn {
-    padding: .5rem;
-    margin: auto;
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 2em;
-    font-weight: bold;
-    border-radius: 5px;
-    border: 2px solid black;
-    background-color: rgb(102, 255, 102);
-    align-items: center;
-}
-
 
 h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: whitesmoke;
-    font-size: 6em;
+    font-family: 'Rampart One', cursive;
+    color: white;
+    font-size: 7em;
     text-align: center;
+    background-image: url('./assets/confetti-4-unscreen.gif');
 }
 
 img {
-   width: 800px;
+   position: fixed;
+   right: 10px;
+    width: 550px;
+ }
 
-}
+img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
 
+  .rules {
+    color: white;
+    /* position: absolute; */
+    top: 60%;
+    font-family: 'PT Sans Narrow';
+    font-size: 2em;
+    text-align: center;
+    justify-content: center;
+   
+
+
+  }
