--- a/game.css
+++ b/game.css
@@ -11,18 +11,29 @@ body {
     background-size: cover;
 }
 
+#countdown-timer{
+    position: relative;
+    font-size: 60px;
+    font-family: fantasy;
+    color:rgb(241, 51, 51);
+    justify-content: center;
+    margin:0;
+    left: 50%;
+    padding: .5em;
+}
+
 .container2 {
-    width: 800px;
-    height: 600px;
+    width: 900px;
+    height: 700px;
     background-color: whitesmoke;
-    box-shadow: 20px 20px 10px;
+    box-shadow: rgb(55, 200, 140) 20px 20px 10px;
     border-radius: 3em;
     margin: 20px 0;
 }
 
 #btn-grid {
     display: grid;
-    gap: 10px;
+    gap: 15px;
 }
 
 /* decorate and align start button */
@@ -34,7 +45,6 @@ body {
     background-color: black;
     color: white;
     text-decoration: none;
-    margin-bottom: 1rem;
     border-radius: 6px;
     border: 2px solid white;
     padding: 1rem;
@@ -53,10 +63,11 @@ body {
     font-size: 1.5em;
 }
 
-#previous-btn, #next-btn {
+#next-btn {
+    position: static;
     padding: .5rem;
     margin: auto;
-    text-align: center;
+    margin-top: 3%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 2em;
     font-weight: bold;
@@ -68,9 +79,4 @@ body {
 
 .controls {
     display: flex;
-}
-
-#h3 {
-    border: block;
-
 }
