--- a/game.css
+++ b/game.css
@@ -14,12 +14,13 @@ body {
 #countdown-timer{
     position: relative;
     font-size: 60px;
-    font-family: fantasy;
+    /* font-family: ; */
     color:rgb(241, 51, 51);
     justify-content: center;
-    margin:0;
-    left: 50%;
+    margin:auto;
+    left: 45%;
     padding: .5em;
+    /* border: solid */
 }
 
 .container2 {
@@ -54,6 +55,8 @@ body {
 
 .btn:hover {
     border-color: rgba(38, 255, 0, 0.405);
+    box-shadow: 0.5rem 0.5rem rgb(146, 235, 98);
+    transform: translateY(-0.5rem);
     
 }
 
@@ -80,3 +83,5 @@ body {
 .controls {
     display: flex;
 }
+
+/* change font of #question, center in div */
