--- a/game.css
+++ b/game.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&family=Edu+NSW+ACT+Foundation&family=Rampart+One&display=swap');
+
 body {
     display: flex;
     padding: 0;
@@ -13,17 +15,23 @@ body {
 
 #countdown-timer{
     position: relative;
-    font-size: 60px;
-    /* font-family: ; */
+    font-size: 6em;
+    font-family: 'Rampart One', cursive;
     color:rgb(241, 51, 51);
     justify-content: center;
-    margin:auto;
-    left: 45%;
-    padding: .5em;
-    /* border: solid */
+    left: 60%;
+    margin-bottom: 2em
+    /* padding: .5em; */
+    
+}
+/* answer buttons container */
+.answer_button{
+    display: flex;
+    margin-bottom: 1.5rem;
+    /* width:100%; */
 }
 
-.container2 {
+#container2 {
     width: 900px;
     height: 700px;
     background-color: whitesmoke;
@@ -32,38 +40,37 @@ body {
     margin: 20px 0;
 }
 
-#btn-grid {
-    display: grid;
-    gap: 15px;
-}
-
-/* decorate and align start button */
-.btn {
-    position: static;
-    left: 50%;
-    font-size: 1.5em;
+/* decorate and align answer buttons */
+.answer {
+    font-size: 2.2em;
     text-align: center;
+    width: 50%;
     background-color: black;
     color: white;
     text-decoration: none;
-    border-radius: 6px;
-    border: 2px solid white;
+    border-radius: 20px;
+    border: 4px solid white;
     padding: 1rem;
     margin: auto;
     justify-content: center;
+   
 }
 
-.btn:hover {
-    border-color: rgba(38, 255, 0, 0.405);
+.answer:hover {
+    border-color: whitesmoke;
+    
     box-shadow: 0.5rem 0.5rem rgb(146, 235, 98);
     transform: translateY(-0.5rem);
     
 }
 
-.question {
+#question {
+    display: flex;
     padding: 2em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    justify-content: center;
+    font-family: 'Rampart One', cursive;
     font-size: 1.5em;
+    margin: auto; 
 }
 
 #next-btn {
@@ -82,6 +89,9 @@ body {
 
 .controls {
     display: flex;
+    margin: auto;
+    justify-content: center;
+
 }
 
 /* change font of #question, center in div */
