--- a/game.css
+++ b/game.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&family=Edu+NSW+ACT+Foundation&family=Rampart+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&family=Edu+NSW+ACT+Foundation&family=Rampart+One&family=Saira:wght@100;400&display=swap');
 
 body {
     display: flex;
@@ -35,7 +35,7 @@ body {
     width: 900px;
     height: 700px;
     background-color: whitesmoke;
-    box-shadow: rgb(55, 200, 140) 20px 20px 10px;
+    box-shadow: rgb(118, 223, 179) 20px 20px 10px;
     border-radius: 3em;
     margin: 20px 0;
 }
@@ -58,7 +58,6 @@ body {
 
 .answer:hover {
     border-color: whitesmoke;
-    
     box-shadow: 0.5rem 0.5rem rgb(146, 235, 98);
     transform: translateY(-0.5rem);
     
@@ -68,23 +67,31 @@ body {
     display: flex;
     padding: 2em;
     justify-content: center;
-    font-family: 'Rampart One', cursive;
-    font-size: 1.5em;
+    font-family: 'Cormorant SC', serif;
+    font-size: 2em;
     margin: auto; 
+    align-items: center;
 }
 
 #next-btn {
     position: static;
-    padding: .5rem;
+    padding: .4rem;
     margin: auto;
-    margin-top: 3%;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* margin-top: 1%; */
+    font-family: 'Rampart One';
+    color: white;
     font-size: 2em;
-    font-weight: bold;
-    border-radius: 5px;
-    border: 2px solid black;
-    background-color: rgb(102, 255, 102);
+    border-radius: 2px;
+    border: 2px solid whitesmoke;
+    background-color: rgb(67, 195, 107);
     align-items: center;
+}
+
+#next-btn:hover {
+    border-color: black;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    transform: translateY(-0.5rem);
+    border-radius: 3em;
 }
 
 .controls {
@@ -94,4 +101,6 @@ body {
 
 }
 
-/* change font of #question, center in div */
+.hide{
+    display: none;
+}
