--- a/game.css
+++ b/game.css
@@ -13,38 +13,40 @@ body {
     background-size: cover;
 }
 
-#countdown-timer{
-    position: relative;
-    font-size: 3.5em;
-    font-family: 'Rampart One', cursive;
-    color:rgb(241, 51, 51);
-    justify-content: center;
-    left: 43%;
-    margin-bottom: 2em
-    /* padding: .5em; */
+/* COUNTDOWN TIMER */
+#countdown-timer {
+    display:flex;
+    font-size: 3em;
+    align-items: center;
+    color: rgb(241, 51, 51);
     
+   
 }
-/* answer buttons container */
-.answer_button{
-    display: flex;
-    margin-bottom: 1.5rem;
-    /* width:100%; */
+#time{
+    margin-right: 1em;
 }
 
-#container2 {
+#container {
     width: 900px;
-    height: 700px;
+    height: 900px;
     background-color: whitesmoke;
     box-shadow: rgb(118, 223, 179) 20px 20px 10px;
     border-radius: 3em;
     margin: 20px 0;
+}
+/* answer buttons container */
+#answer_button {
+    display: grid;
+    margin-bottom: 1.5rem;
+    gap: 10px;
+    /* width:100%; */
 }
 
 /* decorate and align answer buttons */
 .answer {
     font-size: 2.2em;
     text-align: center;
-    width: 50%;
+    width: 75%;
     background-color: black;
     color: white;
     text-decoration: none;
@@ -53,54 +55,91 @@ body {
     padding: 1rem;
     margin: auto;
     justify-content: center;
-   
+
 }
 
 .answer:hover {
     border-color: whitesmoke;
     box-shadow: 0.5rem 0.5rem rgb(146, 235, 98);
     transform: translateY(-0.5rem);
-    
+
+}
+
+.correct {
+    background-color: rgb(161, 226, 62);
+}
+
+.incorrect {
+    background-color: red;
 }
 
 #question {
     display: flex;
-    padding: 2em;
+    padding: .5em;
     justify-content: center;
     font-family: 'Cormorant SC', serif;
-    font-size: 2em;
-    margin: auto; 
+    font-size: 3em;
+    margin: auto;
     align-items: center;
 }
 
-#next-btn {
-    position: static;
-    padding: .4rem;
+#next-btn, #total_correct  {
+    display: block;
+    position: relative;
+    /* padding: .4rem; */
     margin: auto;
-    /* margin-top: 1%; */
+    margin-top: 1%;
     font-family: 'Rampart One';
     color: white;
     font-size: 2em;
     border-radius: 2px;
     border: 2px solid whitesmoke;
     background-color: rgb(67, 195, 107);
-    align-items: center;
+}
+#total_correct {
+    display: block;
+    position: relative;
+    
 }
 
 #next-btn:hover {
     border-color: black;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     transform: translateY(-0.5rem);
     border-radius: 3em;
+    color: black
 }
 
 .controls {
-    display: flex;
+    display: inline;
     margin: auto;
     justify-content: center;
 
 }
 
-.hide{
-    display: none;
+#hud {
+    display:flex;
+    justify-content: space-between;
+    margin-left: 2.5em;
+  
+
 }
+
+.hud-prefix {
+    font-size: 1.5em; ;
+}
+
+.hud-main-text {
+    text-align: center;
+    font-size: 3em;
+    color: red;
+
+}
+
+
+#results {
+
+}
+/* .hide {
+    display: none;
+} */
