--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
     font-size: 2.5em;
     font-weight: 400;
     top: 75%;
+    width: auto;
     background-color: green;
     text-decoration: none;
     border-radius: 100px;
