--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 body {
     display: flex;
     height: 100vh;
@@ -9,27 +8,26 @@ body {
     background-size: cover;
 
 }
+
 /* Start button styling */
-.start-btn{
+.start-btn {
     position: absolute;
     color: white;
     font-size: 2.5em;
-    font-weight: 400;
-    top: 75%;
-    width: auto;
+    font-weight: 900;
+    top: 80%;
     background-color: green;
     text-decoration: none;
-    border-radius: 100px;
-    border: 5px solid black;
-    padding: 15px 30px;
-    margin: auto;
-    margin-bottom: 1rem;
+    border-radius: 60px;
+    border: 2px solid white;
+    padding: 15px 32px;
+    margin: 4px 2px;
+    /* margin-bottom: 1rem; */
 }
 
-.start-btn:hover{
+.start-btn:hover {
     cursor: pointer;
-    box-shadow: 1rem 1rem whitesmoke;
-    transform: translateY(-0.5rem);
+    box-shadow: 0 0 30px whitesmoke;
 }
 
 .container {
@@ -39,28 +37,36 @@ body {
 h1 {
     font-family: 'Rampart One', cursive;
     color: white;
-    font-size: 7em;
+    font-size: 7.5em;
     text-align: center;
+    text-shadow: 3px 3px green;
     background-image: url('./assets/confetti-4-unscreen.gif');
 }
 
 img {
-   position: fixed;
-   right: 10px;
-    width: 550px;
- }
+    position: absolute;
+    left: 68%;
+    width: 500px;
+    top: 30%;
+    transition: transform .2s;
+}
 
 img:hover {
-    transform: scaleX(-1);
-    transform: scaleX(-1);
-  }
+    transform: scale(1.5);
+    /* transform: scaleX(-1);
+    transform: scaleX(-1); */
 
-  .rules {
+}
+
+.rules {
     color: white;
-    /* position: absolute; */
-    top: 60%;
+    position: absolute;
+    bottom: 25%;
+    left: 20%;
     font-family: 'PT Sans Narrow';
     font-size: 2em;
-    text-align: center;
     justify-content: center;
-  }
+    background-color: rgb(32, 36, 25);
+    border-radius: 90px;
+    padding: .5em;
+}
